vpc-swo/SubnetD.tf
resource "aws_subnet" "public_subnet_d" {
  vpc_id                                      = aws_vpc.vpc_swo.id
  enable_resource_name_dns_a_record_on_launch = true
  cidr_block                                  = var.public_subnets.d
  availability_zone                           = "us-east-1d"

  tags = {
    env      = "Production"
    archUUID = "31f2ffc5-3feb-40b3-bdeb-4e6f8197f34a"
    Name     = "public_subnet_d"
  }
}

resource "aws_subnet" "private_subnet_d" {
  vpc_id            = aws_vpc.vpc_swo.id
  cidr_block        = var.private_subnets.d
  availability_zone = "us-east-1d"

  tags = {
    env      = "Production"
    archUUID = "31f2ffc5-3feb-40b3-bdeb-4e6f8197f34a"
    Name     = "private_subnet_d"
  }
}

resource "aws_route_table_association" "rt_association_7" {
  subnet_id      = aws_subnet.public_subnet_d.id
  route_table_id = aws_route_table.rt_public.id
}

resource "aws_route_table_association" "route_table_association_31" {
  subnet_id      = aws_subnet.private_subnet_d.id
  route_table_id = aws_route_table.rt_private.id
}
